# patchVVC-plus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.cache/clangd/index/: dense_segment.cpp.05E931C420342307.idx  exception.cpp.EEA326B890D96902.idx  exception.h.0568B9D3031EFA9B.idx  main.cpp.D5F4309D10B815A4.idx  param.cpp.024D540850AE99AE.idx  param.h.4D2D7AE3852EBE6C.idx  ply_io.cpp.DB2A350D4DC6888E.idx  ply_io.h.9D7EA4A08D4D0BB4.idx  segment.h.EBE94EA70E04D2F7.idx  segment_base.cpp.69A4E1AF03F38094.idx  stat.cpp.A2CA6E6D6C80A264.idx  stat.h.6EF6D6987ABB65CE.idx  test_main.cpp.0351153514F5B1A6.idx
include/: patchVVC.h
include/codec/: pvvc_encoder.h
include/common/: base.h  common.h  entropy_codec.h  exception.h  param.h  parameter.h  stat.h  statistic.h
include/cuda/: CMakeLists.txt  base.cuh  entropy_codec.cuh  helper_gl.h  manager.h  octree.cuh  render.cuh  render_old.cuh  slice_io.cuh
include/cuda/common/: base.cuh
include/cuda/render/: render.cuh
include/io/: patch_io.h  ply_io.h  slice_io.h
include/octree/: octree.cuh  octree.h
include/patch/: patch.h
include/registration/: registration.h
include/render/: render.h
include/segment/: segment.h
src/codec/: pvvc_codec_debug.cc  pvvc_compression.cc  pvvc_decompression.cc  pvvc_deformation.cc  pvvc_encoder.cc  pvvc_segmentation.cc
src/common/: entropy_codec.cc  exception.cc  exception.cpp  param.cpp  parameter.cc  stat.cpp  statistic.cc
src/cuda/: CMakeLists.txt
src/cuda/common/: entropy_codec.cu  manager.cc  slice_io.cu
src/cuda/io/: slice_io.cu
src/cuda/octree/: octree.cu
src/cuda/render/: CUDA2OpenGL.cu  render.cc  render.cpp  render.cu
src/io/: patch_io.cc  ply_io.cc  ply_io.cpp  slice_io.cc
src/octree/: fitting_octree.cc  invert_raht_octree.cc  octree_base.cc  raht_octree.cc
src/patch/: GoP_encoding.cc  patch_fitting.cc
src/registration/: icp.cc  parallel_icp.cc  patches_registration.cc  registration_base.cc
src/render/: fragment.shader  render.cc  vertex.shader
src/segment/: dense_segment.cc  dense_segment.cpp  ref_segment.cc  segment_base.cc  segment_base.cpp
stagecode/: base.cuh  exception.cuh  helper_gl.h  parameter.cu  parameter.cuh
test/: CMakeLists.txt  main.cc  patch_io  patchvvc.cfg  patchvvc_longdress.cfg  patchvvc_loot.cfg  patchvvc_redandblack.cfg  patchvvc_soldier.cfg  test_data.cc  test_decode.cc  test_decode_only.cc  test_decoder_render.cc  test_encode.cc  test_frame_render.cc  test_gpu.cu  test_gpu_mult_idx.cu  test_io.cc  test_param.cc  test_patch_io.cc  test_pvvc.cc  test_render.cc  test_slice_i.cc  test_slice_o.cc  test_zstd.cc  viewer.sh  zstd_exe
test/data/result/: result_2_0.ply  result_2_1.ply  result_2_10.ply  result_2_100.ply  result_2_101.ply  result_2_102.ply  result_2_103.ply  result_2_104.ply  result_2_105.ply  result_2_106.ply  result_2_107.ply  result_2_108.ply  result_2_109.ply  result_2_11.ply  result_2_110.ply  result_2_111.ply  result_2_112.ply  result_2_113.ply  result_2_114.ply  result_2_115.ply  result_2_116.ply  result_2_117.ply  result_2_118.ply  result_2_119.ply  result_2_12.ply  result_2_120.ply  result_2_121.ply  result_2_122.ply  result_2_123.ply  result_2_124.ply  result_2_125.ply  result_2_126.ply  result_2_127.ply  result_2_128.ply  result_2_129.ply  result_2_13.ply  result_2_130.ply  result_2_131.ply  result_2_132.ply  result_2_133.ply  (+343 more)
